# CPPAlgosTasks

./: .gitignore  CMakeLists.txt  Makefile
tasks/: CMakeLists.txt
tasks/task1/: CMakeLists.txt  hello_world.cpp  hello_world_test.cpp
tasks/task2/: CMakeLists.txt
tasks_hash_tables/: CMakeLists.txt
tasks_hash_tables/task1_what_is_a_set/: CMakeLists.txt  README.md  process_input.h  what_is_a_set.cpp
tasks_hash_tables/taskA_what_is_a_set/: CMakeLists.txt  README.md  alternatives.cpp  avlhash.cpp  logic.cpp  main  test.cpp  test_what_is_a_set.cpp  what_is_a_set.cpp
tasks_hash_tables/taskB_test/: README.md  logic.cpp  logic2.cpp  logic3.cpp  logic4.cpp  logic5.cpp  logic6.cpp  logic7.cpp  logic8.cpp  main.cpp  test.cpp
tasks_hash_tables/taskC_biba_and_boba/: CMakeLists.txt  README.md  alternatives.cpp  logic.cpp  main.cpp  test.cpp
tasks_hash_tables/taskD_ban_machine/: README.md  logic.cpp  logic2.cpp  main.cpp  test.cpp
